# guidance-for-medialake-on-aws

./: .gitignore  CHANGELOG.md  MediaLake-Cost-Analysis.md  app.py  config.py  medialake-with-vpc.template  medialake.template  pyrightconfig.json  requirements-dev.txt  requirements.txt
.cicd/: build_ffmpeg.sh  build_ffprobe.sh  build_numpy.sh  build_openexr.sh  config.json-template
.hypothesis/constants/: 56822ab8f6855c10  ddab18ffd9cea6a7
assets/docs/: external-metadata-enrichment.md
davinci_resolve_plugin/: .gitignore  MediaLake.py  README.md  install_resolve_plugin.sh  manifest.xml  playground.py  pytest.ini  requirements.txt  setup.py  test_ingest.py  test_search.py  uninstall_resolve_plugin.sh
davinci_resolve_plugin/medialake_resolve/: __init__.py  __main__.py
davinci_resolve_plugin/scripts/: install_linux.sh  install_macos.sh  install_windows.ps1
davinci_resolve_plugin/tests/: __init__.py  test_auth.py  test_core.py  test_utils.py  (+1 more)
lake-loader/: INGEST_APP_PROMPT.md  README.md  pyproject.toml
lake-loader/lake_loader/: __init__.py  main.py
lake-loader/lake_loader/core/: __init__.py  config.py  history.py  models.py
lake-loader/lake_loader/resources/: __init__.py
lake-loader/lake_loader/services/: __init__.py  api_client.py  auth_service.py  credential_manager.py  ingest_manager.py  upload_service.py
lake-loader/lake_loader/ui/: __init__.py  history_panel.py  ingest_panel.py  login_dialog.py  main_window.py  settings_dialog.py  theme.py
lake-loader/lake_loader/ui/widgets/: __init__.py  progress_delegate.py  status_badge.py
medialake_constructs/: userInterface.py
medialake_stacks/: api_gateway_stack.py  authorization_stack.py  clean_up_stack.py  nodes_stack.py  portal_api_stack.py
medialake_user_interface/: TASK_6.1_VERIFICATION.md
(+317 files in other folders)
